<resources>
    <string name="app_name">MP3Paradise</string>
    <string name="lista">List:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="rep_pass">Repeat password</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_canciones">Songs</string>
    <string name="tab_listas">Lists</string>
    <string name="tab_downloads">Downloads</string>

    <string name="tv_no_file">File not selected</string>
    <string name="tv_select_list">Select list:</string>

    <string name="random_yes">Random reproduction</string>
    <string name="random_no">Sequential reproduction</string>

    <string name="rep_todas">Repetir todas</string>
    <string name="rep_no">No repetir</string>
    <string name="rep_cancion">Repetir canción</string>


    <string name="error_rep_pass">Passwords are not the same</string>
    <string name="error_user_vacio">User cannot be empty</string>
    <string name="it_cerrar_sesion">Log out</string>
    <string name="but_new_lista">New List</string>
    <string name="et_nombre_lista">List name</string>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

    <string name="error_nombre_lista_vavio">List name cannot be empty</string>
    <string name="it_eliminar_lista">Delete list</string>


    <string name="spin_all_canciones">ALL</string>
    <string name="it_quitar_de_lista">Remove from list</string>
    <string name="it_add_a_lista">Add to list</string>
    <string name="it_download">Download</string>

</resources>
